Fixed empty category behaviour. Fixed collapsing animation. (#2536)
CC-34674 Empty category visibility on the catalog facets is not working

--- a/Bundles/CatalogPage/src/SprykerShop/Yves/CatalogPage/Theme/default/components/molecules/filter-category/filter-category.scss
+++ b/Bundles/CatalogPage/src/SprykerShop/Yves/CatalogPage/Theme/default/components/molecules/filter-category/filter-category.scss
@@ -10,15 +10,17 @@
         }
 
         &__category-target {
-            @include helper-effect-transition(max-height);
-            overflow: hidden;
-            max-height: 100rem;
-            opacity: 1;
+            @include helper-effect-transition(grid-template-rows);
+            display: grid;
+            grid-template-rows: 1fr;
 
             &--hidden {
-                max-height: 0;
-                opacity: 0;
+                grid-template-rows: 0fr;
             }
+        }
+
+        &__category-target-inner {
+            overflow: hidden;
         }
 
         &__category-row {
